--- a/src/pages/Hour/styles.css
+++ b/src/pages/Hour/styles.css
@@ -1,23 +1,43 @@
-.hour {
-  position: relative;
+.schedule-wrapper {
   width: 100%;
-  height: 3.5em;
-  background-color: #63a2e2;
-  margin-bottom: 0.5em;
-  padding: 0.2em 0.4em;
-
-  display: flex;
-  flex-direction: column;
-  border-bottom: 1px solid #555;
-  
-  font-size: 1em;
+  background-color: rgba(146, 146, 146, 0.1);
+  margin: 0.5em 0;
 }
 
-.hour__input {
-  position: absolute;
-  bottom: 0;
-  font-size: 1.5em;
+.schedule {
+  display: flex;
+  flex-direction: column;
 
-  background: none;
-  border: none;
+  border-left: 4px solid #001AFF;
+  padding: 0.2em 2.8em;
+  width: 75%;
+  margin: auto;
+}
+
+.schedule__info-top,
+.schedule__info-bottom {
+  display: flex;
+  justify-content: space-between;
+}
+
+.schedule__procedure {
+  font-size: 1.2em;
+  color: #001AFF;
+}
+
+.schedule__hour {
+  font-size: 1.2em;
+  font-weight: 500;
+}
+
+.schedule__info-bottom {
+  margin-top: 0.7em;
+
+  color: #6b6b6b;
+  font-size: 0.9em;
+}
+
+.schedule__field {
+  padding: 0.1em;
+  margin-left: 15%;
 }
