add button to schedule

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   --bg-color: #F1F1F1;
   --bg-darker: #E7E7E7;
   --text-gray: #6B6B6B;
+  --button-color: #006edc;
 
   --consultation-color: #000080;
   --consultation-bg: #E5E5F2;
