--- a/src/pages/Dashboard/styles.css
+++ b/src/pages/Dashboard/styles.css
@@ -12,22 +12,30 @@
   padding: 0 0.5em;
 }
 
-.schedules-container {
+.schedules {
   width: 100%;
   max-width: 650px;
   height: 35vh;
 }
 
-.schedules__date {
-  text-decoration-line: underline;
-  padding: 0.5em 2em;
+.schedules__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5em 0;
+  width: calc(100% - 4em);
+  margin: auto;
 }
 
-.schedules__date--desktop {
+.schedules__header__date {
+  text-decoration-line: underline;
+}
+
+.schedules__header__date--desktop {
   display: none;
 }
 
-.schedules {
+.schedules__content {
   background-color: #ffffff;
   width: 100%;
   height: 100%;
@@ -39,7 +47,7 @@
   position: relative;
 }
 
-.schedules__empty {
+.schedules__content__empty {
   text-align: center;
   margin-top: 35%;
 
@@ -52,9 +60,10 @@
     padding: 0 1.5em;
   }
 
-  .schedules__date {
+  /* .schedules__header {
     padding-left: 3.7em;
-  }
+    padding-right: 3.7em;
+  } */
 }
 
 @media (min-width: 1000px) {
@@ -65,7 +74,7 @@
     font-size: 18px;
   }
 
-  .schedules-container {
+  .schedules {
     height: 75vh;
   }
 
