--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -9,8 +9,23 @@
   box-shadow: 2px 2px 6px -4px rgba(0, 0, 0, 0.9);
 
   color: #fff;
-  font-size: 1em;
+  font-size: 0.95em;
 
-  padding: 0.3em 0.5em;
+  padding: 0.5em 1em;
   cursor: pointer;
+}
+
+.button__icon {
+  font-size: 1.3em;
+  margin-left: 0.2em;
+}
+
+@media (min-width: 1000px) {
+  .button {
+    font-size: 1em;
+  }
+
+  .button__icon {
+    font-size: 1.35em;
+  }
 }
