--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   --bg-darker: #E7E7E7;
   --text-gray: #6B6B6B;
   --button-color: #006edc;
-  --cancel-button: #585858;
+  --cancel-button: #9e9e9e;
 
   --consultation-color: #000080;
   --consultation-bg: #E5E5F2;
