add delete appointment function

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   --text-gray: #6B6B6B;
   --button-color: #006edc;
   --cancel-button: #9e9e9e;
+  --delete-button: #d10000;
 
   --consultation-color: #000080;
   --consultation-bg: #E5E5F2;
