--- a/src/components/AppointmentModal/styles.css
+++ b/src/components/AppointmentModal/styles.css
@@ -91,12 +91,21 @@
 
 /* FOOTER */
 .modal__footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 0.7em;
+  margin-top: 1em;
 }
 
-.button__cancel {
-  background-color: var(--cancel-button);
+.footer__new {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__edit {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__edit--bottom {
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 1em;
 }
