--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   --button-color: #006edc;
   --cancel-button: #9e9e9e;
   --delete-button: #d10000;
+  --hover: rgba(0, 0, 0, 0.25);
 
   --consultation-color: #000080;
   --consultation-bg: #E5E5F2;
@@ -29,4 +30,14 @@ body {
 
 body, input, button {
   font-family: 'Roboto', sans-serif;
+}
+
+.container {
+  width: 100%;
+  max-width: 1150px;
+  height: 100%;
+  margin-top: 2em;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 0.5em;
 }
