--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -7,7 +7,8 @@
   border-radius: 2px;
   box-shadow: 2px 2px 6px -4px rgba(0, 0, 0, 0.9);
 
-  font-size: 0.95em;
+  font-size: 0.95rem;
+  height: 100%;
 
   padding: 0.5em 1em;
   cursor: pointer;
