--- a/src/pages/Clients/styles.css
+++ b/src/pages/Clients/styles.css
@@ -2,4 +2,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 0;
+}
+
+.clients__nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 90%;
+}
+
+@media (min-width: 768px) {
+  .clients {
+    width: 50%;
+  }
 }
