add topbar links some style

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,10 @@ body, input, button {
   font-family: 'Roboto', sans-serif;
 }
 
+li {
+  list-style: none;
+}
+
 .container {
   width: 100%;
   max-width: 1150px;
