--- a/src/components/Topbar/styles.css
+++ b/src/components/Topbar/styles.css
@@ -1,5 +1,55 @@
 .topbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #fff;
   height: 60px;
   box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.64);
+}
+
+.topbar__nav {
+  width: 50%;
+}
+
+.topbar__links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.topbar__link {
+  color: #111;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 500;
+
+  position: relative;
+}
+
+.topbar__link:hover {
+  color: var(--button-color);
+}
+
+.topbar__link::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: var(--button-color);
+  content: '';
+  height: 2px;
+
+}
+
+.topbar__link:hover::after {
+  animation: 350ms ease-out hover forwards;
+
+}
+
+@keyframes hover {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
