--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   --bg-color: #F1F1F1;
   --bg-darker: #E7E7E7;
   --text-gray: #6B6B6B;
-  --button-color: #006edc;
+  --primary-color: #006edc;
   --cancel-button: #9e9e9e;
   --delete-button: #d10000;
   --hover: rgba(0, 0, 0, 0.25);
